[gd_scene load_steps=16 format=2]

[ext_resource path="res://musicandsound/firework_explosion_001.wav" type="AudioStream" id=1]
[ext_resource path="res://color/0.tres" type="Gradient" id=2]
[ext_resource path="res://Scene/ExplosionFirwork.gd" type="Script" id=3]
[ext_resource path="res://resource/Winbackground.PNG" type="Texture" id=5]
[ext_resource path="res://Scene/ExplosionFirwork.tres" type="Material" id=6]
[ext_resource path="res://musicandsound/setorinawin.mp3" type="AudioStream" id=7]
[ext_resource path="res://resource/font/alagard_by_pix3m-d6awiwp.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scene/01.png" type="Texture" id=9]

[sub_resource type="GradientTexture" id=8]
gradient = ExtResource( 2 )

[sub_resource type="GradientTexture" id=7]
gradient = ExtResource( 2 )

[sub_resource type="ParticlesMaterial" id=6]
color_ramp = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=3]
render_priority = 4
next_pass = SubResource( 6 )
flag_disable_z = true
direction = Vector3( -500, 5, 5 )
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 246.51
initial_velocity_random = 0.9
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 50.0
scale = 3.0
color_ramp = SubResource( 8 )
hue_variation = 0.15
hue_variation_random = 0.5

[sub_resource type="Theme" id=9]

[sub_resource type="DynamicFont" id=10]
size = 25
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.627451, 0.568627, 0.788235, 1 )

[node name="ExplosionFirwork" type="Node2D"]
position = Vector2( 257, 179 )
script = ExtResource( 3 )

[node name="Winbackground" type="Sprite" parent="."]
position = Vector2( 242, 124 )
scale = Vector2( 2.54861, 2.83536 )
texture = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( -40, 114 )
amount = 600
lifetime = 2.0
explosiveness = 0.95
visibility_rect = Rect2( 0, 0, 0, 0 )
process_material = SubResource( 3 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 242, -41 )
amount = 600
lifetime = 2.0
explosiveness = 0.95
randomness = 0.01
visibility_rect = Rect2( 0, 0, 0, 0 )
process_material = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -8, -35 )
stream = ExtResource( 1 )
volume_db = -1.677
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
material = ExtResource( 6 )
margin_left = 288.0
margin_top = 28.0
margin_right = 762.0
margin_bottom = 424.0
texture = ExtResource( 9 )
expand = true
flip_h = true

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 150, -67 )
stream = ExtResource( 7 )
autoplay = true
max_distance = 4000.0

[node name="Button" type="Button" parent="."]
light_mask = 0
margin_left = 170.0
margin_top = 337.0
margin_right = 392.0
margin_bottom = 410.0
theme = SubResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
text = "Back to Win Again"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
